# claude-agent-sdk-ui

./: .gitignore  CLAUDE.md  README.md  package.json  tmux-start.sh  tmux-stop.sh
backend/: .env.example  CLAUDE.md  DOCKER.md  Dockerfile  Makefile  README.md  agents.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  subagents.yaml
backend/agent/core/: agent_options.py  agents.py  config.py  hook.py  session.py  storage.py  subagents.py
backend/api/: __init__.py  config.py  constants.py  dependencies.py  main.py
backend/api/core/: __init__.py  errors.py
backend/api/db/: __init__.py  user_database.py
backend/api/dependencies/: __init__.py  auth.py
backend/api/middleware/: auth.py  jwt_auth.py
backend/api/models/: __init__.py  auth.py  requests.py  responses.py  user_auth.py
backend/api/routers/: __init__.py  auth.py  configuration.py  conversations.py  health.py  sessions.py  user_auth.py  websocket.py
backend/api/services/: __init__.py  conversation_service.py  history_storage.py  history_tracker.py  message_utils.py  question_manager.py  session_manager.py  token_service.py
backend/api/utils/: __init__.py  websocket.py
backend/cli/: main.py  theme.py
backend/cli/clients/: __init__.py  api.py  config.py  direct.py  event_normalizer.py  ws.py
backend/cli/commands/: __init__.py  chat.py  handlers.py  list.py  serve.py
backend/core/: __init__.py  settings.py
backend/data/: sessions.json
backend/data/history/: 01cd9862-fcd8-456a-be34-a975790f9d7c.jsonl  09c098ac-ab9f-4a37-ae7a-af8c7beee818.jsonl  0dc4cc01-5760-4a77-a381-e373032398b4.jsonl  100f8ace-4841-4ecf-b465-3e743193bf78.jsonl  108c3c3b-29eb-43e4-9d07-7d0babbf5619.jsonl  1ce6dd77-5b12-4b42-9470-c7c42320c3c9.jsonl  348ae61e-da70-40b5-ad2f-e85e82cf4263.jsonl  57b393b3-78a1-4cd4-8a6f-02325bfdb347.jsonl  9b2d9bd2-b6a2-4e6e-ac3d-4382dd111608.jsonl  9d5e8d3b-4991-46ab-a541-e5a778f07784.jsonl  (+3 more)
backend/tests/: conftest.py  test00_sdk_permissions.py  test01_sdk_multi_turn.py  test02_auth.py  test03_api_agent_selection.py  test04_websocket_timing.py  test_api_constants.py  test_api_endpoints_comprehensive.py  test_api_errors.py  test_api_models.py  test_auth.py  test_claude_agent_sdk_multi_turn.py  test_conversations_sse.py  test_db_user_database.py  test_dependencies_auth.py  test_main.py  test_message_utils.py  test_middleware_auth.py  test_middleware_jwt_auth.py  test_routers_auth.py  test_routers_configuration.py  test_routers_conversations.py  test_routers_health.py  test_routers_sessions.py  test_routers_user_auth.py  test_routers_websocket.py  test_services_history_tracker.py  test_services_message_utils.py  test_services_question_manager.py  test_services_session_manager.py  test_session_manager.py  test_session_manager_integration.py  test_session_programmatic_api.py  test_utils_websocket.py  test_verify_persistence.py
(+180 files in other folders)
