[project]
name = "claude-agent-sdk-env"
version = "0.1.0"
description = "Interactive chat application wrapping Claude Agent SDK with Skills and Subagents support"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.18",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich",
    # FastAPI and server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
    # CLI
    "click>=8.1.0",
    # HTTP client for CLI API mode
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    # JWT authentication
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "anyio>=4.0",
]
eval = [
    "chevron>=0.14.0",
]
livekit = [
    "livekit>=0.17.0",
    "livekit-agents>=0.12.0",
    "livekit-plugins-openai>=0.10.0",
    "livekit-plugins-deepgram>=0.7.0",
    "livekit-plugins-cartesia>=0.4.0",
    "livekit-plugins-silero>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestAssertRewriteWarning",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "anyio>=4.0",
    "chevron>=0.14.0",
]
